examples/test/testpolicy16581.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16581
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key43: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value25
          key21: value41
          key10: value9
      podSelector:
        matchLabels:
          key33: value30
          key0: value30
          key2: value1
